PR/53983: Jonathan Perkins: Fix types for readline compatibility